<resources>
    <string name="app_name">Asteroid Radar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="close_approach_date">Close approach date</string>
    <string name="absolute_magnitude">Absolute magnitude</string>
    <string name="estimated_diameter">Estimated diameter</string>
    <string name="relative_velocity">Relative Velocity</string>
    <string name="distance_from_earth">Distance from earth</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="estimated_diameter_format">%f km</string>
    <string name="relative_velocity_format">%f km/s</string>
    <string name="dialog_message">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="accept">Accept</string>
</resources>